--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "cotrollers",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon /src/app.js"
+    "dev": "nodemon /Users/mahmoudalhato/Desktop/Dream_team/src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +16,16 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "express": "^4.17.3"
-  }
+    "express": "^4.17.3",
+    "node-fetch": "^2.6.7"
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GSG-G11/Dream_team.git"
+  },
+  "bugs": {
+    "url": "https://github.com/GSG-G11/Dream_team/issues"
+  },
+  "homepage": "https://github.com/GSG-G11/Dream_team#readme"
 }
