--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon /Users/mahmoudalhato/Desktop/Dream_team/src/app.js"
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
