--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "test": "jest",
     "dev": "nodemon src/index.js"
   },
   "keywords": [],
@@ -13,11 +14,13 @@
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
     "express": "^4.17.3",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "supertest": "^6.2.2"
   },
   "main": "index.js",
   "repository": {
